# java_lib_file_group_repro

./: WORKSPACE  import_external.bzl  macros.bzl
iterator/: BUILD.bazel  MANIFEST.MF
iterator/src/main/java/com/iluwatar/iterator/: BUILD.bazel
iterator/src/main/java/com/iluwatar/iterator/bst/: BUILD.bazel
