package(default_visibility = ["//visibility:public"])
load("//:macros.bzl", "sources")
java_library(

    name = "agg=._bst_list",
    srcs = [
        "//iterator/src/main/java/com/iluwatar/iterator/bst:sources" , 
        "//iterator/src/main/java/com/iluwatar/iterator/list:sources" , 
        "//iterator/src/main/java/com/iluwatar/iterator:sources"
    ],
    deps = [
        "//iterator:main_dependencies"
    ],
    runtime_deps = [
        
    ],
    
)

sources()
